--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
 	color: white;
 	margin: auto;
 	margin-bottom: 30px;
-	background-color: #3f98c4;
+	background-color: #2b9682;
 	text-transform: uppercase;
 	box-shadow: 2px 2px 5px 0 rgba(0, 0, 0, 0.5)
   }
